# Thesis_maga

./: .gitignore  LAUNCH_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_STREAMLIT.md  README_TELEGRAM.md  dump.rdb  launcher.py  requirements-dev.txt  requirements.txt  run_streamlit.py  start.bat  start.sh  streamlit_app.py  streamlit_components.py  telegram_integration.py  test_forecast_tool.py  НОВЫЕ_ВОЗМОЖНОСТИ.md
portfolio_assistant/: __init__.py  dependencies.txt  pyproject.toml  requirements.txt
portfolio_assistant/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
portfolio_assistant/catboost_info/learn/: events.out.tfevents
portfolio_assistant/local/snapshots/: 2025-05-22T09-27-24.372487Z.json  2025-05-22T09-39-09.393437Z.json  2025-05-22T09-57-08.872378Z.json  2025-05-22T10-36-43.053868Z.json  test_base_snap_for_scenario-scn-44136fa3.json  test_base_snap_for_scenario-scn-6a0d4d24.json  test_base_snap_for_scenario-scn-b6ce4366.json  test_base_snap_for_scenario-scn-c5a3aa7c.json  test_base_snap_for_scenario-scn-d6b864af.json
portfolio_assistant/src/: __init__.py
portfolio_assistant/src/bot/: agent_integration.py  config.py  create_db.py  handlers.py  main.py  reply.py  state.py
portfolio_assistant/src/market_snapshot/: model.py  registry.py  snapshot.py  snapshot_registry.py
portfolio_assistant/src/pf_agents/: __init__.py  runtime.py
portfolio_assistant/src/tools/: FIXED_ISSUES.md  README.md  TESTING_COMPLETE_REPORT.md  __init__.py  correlation_tool.py  efficient_frontier_tool.py  forecast_tool.py  index_composition_tool.py  test_tools.py  (+10 more)
portfolio_assistant/tests/: test_forecast_tool.py  test_optimize_tool.py  test_scenario_tool.py  test_sentiment_tool.py  test_snapshot.py
(+171 files in other folders)
