[tool.poetry]
name = "portfolio-assistant"
version = "0.1.0"
description = "AI Portfolio Assistant"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13.4"
numpy = "*"
pandas = "*"
pydantic = "*"
redis = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
aiohttp = "*"
torch = "^2.7.0"
# pytorch-lightning = "*"
pyportfolioopt = "*"
transformers = ">=4.41"
openai = "*"
llama-index = "*"
yfinance = "*"
ccxt = "*"
orbit-ml = "*"
typer = "^0.12.3"
loguru = "^0.7.2"
newsapi-python = "^0.2.7"
catboost = "*"
pandas-ta = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 